kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-board
  labels:
    name: job-board
    environment: production
